<resources>
    <string name="app_name">Bfw App</string>
    <string name="action_settings">Settings</string>
    <string name="message1">Buy From Women Rwanda</string>
    <string name="message2">Land Registration</string>
    <string name="message3">Manage Harvest</string>
    <string name="comments1">
        Farmers Registration
    </string>
    <string name="comments2">
        Add land information
    </string>
    <string name="comments3">
        View Sales and Purchases orders
    </string>
    <string name="login">Login</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short (>= 3 characters)</string>
    <string name="error_invalid_product_name">This name is too short (>= 3 characters)</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_navigation">Bfw App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="profiles">Farmers</string>
    <string name="sales">Sales</string>
    <string name="loan">Loan</string>
    <string name="user_profile">Users Profile</string>
    <string name="user_profile_simple">Profile</string>
    <string name="user_profile_coop_agent">Coop Profile</string>
    <string name="liste_farmer">Farmers</string>
    <string name="user_profile_buyer">Buyer Profile</string>
    <string name="user_profile_vendor">Vendor Profile</string>
    <string name="purchase">Purchases</string>
    <string name="stats">Summary</string>
    <string name="settings">Settings</string>
    <string name="user_profile_image">User Profile Image</string>
    <string name="about">About</string>
    <string name="farmer_list">Farmers List</string>
    <string name="uname">john@gmail.com</string>
    <string name="title_activity_farmer_detail">Farmer Detail</string>
    <string name="generalVendor">General</string>
    <string name="general">General</string>
    <string name="production">Harvest</string>
    <string name="land">Land</string>
    <string name="sell">Sell</string>
    <string name="create_general">General</string>
    <string name="create_land">Land</string>
    <string name="create_farmer">Create Farmer</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="coop">Coop</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="image_profile">Image Profile</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="househol_head">Household Head</string>
    <string name="family_in_house_hold">Family # in House Hold</string>
    <string name="spouse_name">Spouse Name</string>
    <string name="mobile_money_account">Mobile Money Account</string>
    <string name="notes">Notes</string>
    <string name="rainfall_notification">Rainfall Notification</string>
    <string name="plot_status">Plot Status</string>
    <string name="plot_size">Plot Size</string>
    <string name="land_location">Land Location</string>
    <string name="email">Email</string>
    <string name="number_of_arable_land_plots">Number of arable land plots</string>
    <string name="total_farmer_land_size">Total farmer land size</string>
    <string name="expected_total_production_in_kg">Expected Total Production in KG</string>
    <string name="expected_sales_outside_the_ppp">Expected sales outside the PPP</string>
    <string name="expected_post_harvest_loss_in_kg">Expected Post Harvest loss in KG</string>
    <string name="total_coop_land_size_in_ha">Total Coop Land Size (in HA)</string>
    <string name="percent_coop_land_size">Farmer % of total coop land size</string>
    <string name="spouse_f_name">Spouse First Name</string>
    <string name="spouse_last_name">Spouse Last Name</string>
    <string name="cell_phone_alt">Cell phone (Alt)</string>
    <string name="cell_carrier">Cell Carrier</string>
    <string name="membership_id">Membership ID</string>
    <string name="number_of_household_members">Number of Household Members</string>
    <string name="household_members"># Household Members</string>
    <string name="total_production_in_kg">Total production in KG</string>
    <string name="tot_lost">Total Lost in KG</string>
    <string name="total_sold_in_kg">Total Sold in KG</string>
    <string name="tot_vol_sold_coop">Total volume sold to your coop in KG</string>
    <string name="price_sold_to_the_coop_per_kg">Price sold to the coop per KG</string>
    <string name="tot_vol_side_sold">Total volume that was side-sold in KG</string>
    <string name="price_sold_kg">Price side-sold in KG</string>
    <string name="total_loan_amount_in_rwf">Total loan amount (in RWF)</string>
    <string name="tot_outstanding">Total outstanding (in RWF)</string>
    <string name="interest_rate">Interest Rate (% in months)</string>
    <string name="interest_rate_simple">Interest Rate</string>
    <string name="duration_month">Duration (months)</string>
    <string-array name="loan_provider">
        <item>bank</item>
        <item>cooperative</item>
        <item>sacco</item>
        <item>other</item>
    </string-array>
    <string name="outstanding_loan">Outstanding Loan</string>
    <string name="loan_purpose">Loan Purpose</string>
    <string name="input">Input</string>
    <string name="aggregation">Aggregation</string>
    <string name="other">Other Water source</string>
    <string name="new_resources">Other available resource</string>
    <string name="mm_acct">Mobile Money Account</string>
    <string name="harvsetSeason">Harvest Season</string>
    <string name="available_resources">Available Resources</string>
    <string name="agri_extension">Agricultural extension services</string>
    <string name="climate_related_information_e_g_weather_forecasts">Climate related information (e.g. weather forecasts)</string>
    <string name="climate_related_info_e_g_weather_forecasts">Climate related information</string>
    <string name="seed">Seeds</string>
    <string name="organic_fertilizers">Organic Fertilizers</string>
    <string name="inor_fert">Inorganic Fertilizers</string>
    <string name="labour">Labour</string>
    <string name="irrigation_water_pumps">Irrigation/Water pumps</string>
    <string name="tractors">Tractors</string>
    <string name="harv">Harvester</string>
    <string name="spreaders_or_sprayers">Spreaders or Sprayers</string>
    <string name="dryer">Dryer</string>
    <string name="thresher">Thresher</string>
    <string name="safe_storage">Storage Information</string>
    <string name="other_res_av">Other</string>
    <string name="main_water_source">Main water source</string>
    <string name="dam">Dam</string>
    <string name="well">Well</string>
    <string name="borehole">Borehole</string>
    <string name="river_stream">River/Stream</string>
    <string name="pipe_borne">Pipe-Borne</string>
    <string name="irrigation">Irrigation</string>
    <string name="none">None</string>
    <string name="s_other">Other</string>
    <string name="internal_reference">Internal Reference</string>
    <string name="is_a_customer">Is a Customer</string>
    <string name="is_a_vendor">Is a Vendor</string>
    <string name="internal_note">Internal Note</string>
    <string name="land_size_in_ha">Land Size in ha</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="add">Add</string>
    <string name="account_number">Account Number</string>
    <string name="account_holder">Account Holder</string>
    <string name="bank_name">Bank Name</string>
    <string name="add_b">Add</string>
    <string name="p_o_name">Name</string>
    <string name="p_n">Partner Name</string>
    <string name="active">Active</string>
    <string name="acq_account">Acquirer Account</string>
    <string name="acq_ref">Acquirer Ref.</string>
    <string name="partner_phone_number">Partner Phone Number</string>
    <string-array name="harverstSeason">
        <item>2017A</item>
        <item>2017B</item>
        <item>2018A</item>
        <item>2018B</item>
    </string-array>
    <string-array name="grade_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="rgcc_contract">
        <item>yes</item>
        <item>no</item>
    </string-array>
    <string-array name="coop_grade">
        <item>A</item>
        <item>B</item>
        <item>C</item>
    </string-array>
    <string-array name="fin_institution">
        <item>bank</item>
        <item>sacco</item>
        <item>cooperative</item>
    </string-array>
    <string-array name="purpose_loan">
        <item>aggregation</item>
    </string-array>
    <string name="payment_detail">Payment Detail</string>
    <string-array name="product_info">
        <item>Maize grade I</item>
        <item>Maize grade II</item>
        <item>Maize grade III</item>
    </string-array>
    <string-array name="vendor_info">
        <item>Vendor I</item>
        <item>Vendor II</item>
        <item>Vendor III</item>
    </string-array>
    <string name="ms_prev">PREV</string>
    <string name="ms_next">NEXT</string>
    <string name="ms_end">COMPLETE</string>
    <string name="ms_continue">CONTINUE</string>
    <string name="ms_optional">Optional</string>
    <string name="ms_text_step">Step $current of $total</string>
    <string name="customer">Customer</string>
    <string name="harvest_season">Harvest Season</string>
    <string name="order_lines">Order Lines</string>
    <string name="product">Product</string>
    <string name="product_name">Product name</string>
    <string name="sale_price">Sale price</string>
    <string name="cost">Cost</string>
    <string name="quantity">Quantity (Kg)</string>
    <string name="add_so_contract">Add New Product</string>
    <string name="payment_term">Payment Term</string>
    <string name="start_date">Creation Date</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="price_rwf">Unit Price (RWF)</string>
    <string name="title_activity_sale_order_contact">Sale Order Contract</string>
    <string name="title_activity_sale_order_info">Sale Order</string>
    <string name="title_activity_product">Product</string>
    <string name="view_contract_details">Contract Details</string>
    <string name="update_contract">Update Contract</string>
    <string name="validate_sale_order">Validate Sale Order</string>
    <string name="payment_date">Payment Date</string>
    <string name="payment_amount_rwf">Payment Amount (Rwf)</string>
    <string name="memo">Memo</string>
    <string name="validate">Validate</string>
    <string name="val_so_settings">Settings</string>
    <string name="vendor">Vendor</string>
    <string name="farmer">Farmer</string>
    <string name="vendor_name">Vendor name</string>
    <string name="coop_agent">Coop Agent</string>
    <string name="details_coop_">Cooperative Details</string>
    <string name="date">Date</string>
    <string name="logout_user">Logout</string>
    <string name="harvest_season_2016">Harvest Season 2016</string>
    <string name="others_fin">Others</string>
</resources>