<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/features"
        android:checkableBehavior="single">
        <item
            android:id="@+id/user_profile"
            android:icon="@mipmap/profile_user"
            android:title="@string/user_profile" />
        <item
            android:id="@+id/profile_farmer"
            android:icon="@mipmap/farmers"
            android:title="@string/liste_farmer" />
        <item
            android:id="@+id/profile_coop"
            android:icon="@mipmap/profile_user"
            android:title="@string/user_profile_coop_agent" />
        <item
            android:id="@+id/profile_buyer"
            android:icon="@drawable/ic_farmer"
            android:title="@string/user_profile_buyer" />
        <item
            android:id="@+id/profile_vendor"
            android:icon="@mipmap/profile_user"
            android:title="@string/user_profile_vendor" />
        <item
            android:id="@+id/sales"
            android:icon="@mipmap/loan_black"
            android:title="@string/sales" />
        <item
            android:id="@+id/purchases"
            android:icon="@mipmap/purchase_black"
            android:title="@string/purchase" />
        <item
            android:id="@+id/loan"
            android:icon="@mipmap/loan_balck"
            android:title="@string/loan" />
        <item
            android:id="@+id/product"
            android:icon="@mipmap/product_black"
            android:title="@string/product" />
    </group>

    <group
        android:id="@+id/settings"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_applications_black_24dp"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_abouts"
            android:title="@string/about" />
        <item
            android:id="@+id/logout_user"
            android:icon="@drawable/ic_input_black_24dp"
            android:title="@string/logout_user" />
    </group>
</menu>
