<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/info_season_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="left"
            android:text="@string/harvest_season_2016"
            android:textAppearance="?android:attr/textAppearanceSmallInverse"
            android:textColor="@color/activated"
            android:textSize="15dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/access_info_season_first2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="1px"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/cardview_shadow_end_color"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/agri_extension"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/pic_agri_extension_details2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="right|center_vertical|center_horizontal|center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/cardview_shadow_end_color"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/climate_related_info_e_g_weather_forecasts"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/pic_clim_rel_details2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="right|center_vertical|center_horizontal|center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/cardview_shadow_end_color"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/seed"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/pic_seed_details2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="right|center_vertical|center_horizontal|center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/cardview_shadow_end_color"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/organic_fertilizers"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/pic_org_fert_details2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="right|center_vertical|center_horizontal|center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/cardview_shadow_end_color"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/inor_fert"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/pic_inorg_fert_details2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="right|center_vertical|center_horizontal|center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/cardview_shadow_end_color"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/labour"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/pic_labour_details2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="right|center_vertical|center_horizontal|center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/cardview_shadow_end_color"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/irrigation_water_pumps"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/pic_irr_w_p_details2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="right|center_vertical|center_horizontal|center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/cardview_shadow_end_color"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/spreaders_or_sprayers"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/pic_spread_or_spray_details2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="right|center_vertical|center_horizontal|center" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>

