<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/finance_season_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="left"
            android:text="Harverst Season 2017"
            android:textAppearance="?android:attr/textAppearanceSmallInverse"
            android:textColor="@color/activated"
            android:textSize="15dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/access_info_season_first2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="1px"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="2"
            android:background="@color/cardview_shadow_end_color"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/outstanding_loan"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/pic_outstanding_loan"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:src="@mipmap/icon_sm_ok"
                android:gravity="left" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="5"
            android:background="@color/cardview_shadow_end_color"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/total_loan_amount_in_rwf"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tot_vol_side_sold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="4"
                android:gravity="left"
                android:textAlignment="viewEnd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="5"
            android:background="@color/cardview_shadow_end_color"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/tot_outstanding"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tot_outstanding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="4"
                android:gravity="left"
                android:textAlignment="viewEnd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="5"
            android:background="@color/cardview_shadow_end_color"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/interest_rate"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/interest_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="4"
                android:gravity="left"
                android:textAlignment="viewEnd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="5"
            android:background="@color/cardview_shadow_end_color"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/duration_month"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/duration_month"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="4"
                android:gravity="left"
                android:textAlignment="viewEnd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="5"
            android:background="@color/cardview_shadow_end_color"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/loan_provider"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/loan_provider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="4"
                android:gravity="left"
                android:textAlignment="viewEnd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="2"
            android:background="@color/cardview_shadow_end_color"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/input"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/input"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="right|center_vertical|center_horizontal|center"
                android:src="@mipmap/icon_sm_ok" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="2"
            android:background="@color/cardview_shadow_end_color"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/aggregation"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/aggregation"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="right|center_vertical|center_horizontal|center"
                android:src="@mipmap/icon_sm_ok" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="2"
            android:background="@color/cardview_shadow_end_color"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/others_fin"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/other_fin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="right|center_vertical|center_horizontal|center"
                android:src="@mipmap/icon_sm_ok" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="2"
            android:background="@color/cardview_shadow_end_color"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/mobile_money_account"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/mobile_m_account"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="right|center_vertical|center_horizontal|center"
                android:src="@mipmap/icon_sm_ok" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>
